--- a/docs/changelog/5.3.0.mdx
+++ b/docs/changelog/5.3.0.mdx
@@ -6,20 +6,38 @@ keywords: ["webiny", "version", "5.3.0"]
 description: See what's new in Webiny version 5.3.0.
 ---
 
+import CenteredImage from "../mdxComponents/centeredImage";
+import cliReporting from "./5.3.0/cli-reporting.png";
+import searchBarCms from "./5.3.0/search-bar-cms.png";
+
 # Changes
+
+This document contains the most important fixes, improvements, and features, that were introduced in Webiny `5.3.0`.
 
 ## Headless CMS
 
-### Fixed Search Bar [(#1532)](https://github.com/webiny/webiny-js/pull/1532)
-
 ### Improved the `contains` GraphQL Operator [(#1531)](https://github.com/webiny/webiny-js/pull/1531)
 
+While querying data via the [Headless CMS GraphQL API](/docs/key-topics/webiny-applications/headless-cms/graphql-api), and using the `contains` query operator on a **text** field, [reserved ElasticSearch characters](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-query-string-query.html#_reserved_characters) are now properly escaped. Without it, users could receive unexpected results or even errors, thrown by the ElasticSearch itself.
+
+### Fixed Search Bar [(#1532)](https://github.com/webiny/webiny-js/pull/1532)
+
+A couple of fixes were implemented on the search bar, located in the content entries view:
+
+- no infinite redirects when switching from one content entry to another (via main-menu)
+- results don't disappear when clearing up the search bar's input
+
+<CenteredImage alt="Headless CMS - Fixed Search Bar" src={searchBarCms} />
 
 ## Webiny CLI
 
 ### Improved Error Reporting [(#1526)](https://github.com/webiny/webiny-js/pull/1526)
 
-We've noticed that, in certain cases, it can get a bit hard to understand the error that occurred in user's terminal. A typical example is the `SubscriptionRequiredException` error, which, without doing some googling, mean nothing to the user.
+We've noticed that, in certain cases, it can get a bit hard to understand the error that occurred in the terminal. A typical example is the `SubscriptionRequiredException` error, which can happen upon deploying your project, and which, without doing some googling, means nothing to the user.
+
+So, from now on, whenever there's a chance to provide additional information about the received error, we provide it, along with a link to a helpful resource, like an article on our docs website. For example:
+
+<CenteredImage alt="Webiny CLI - Improved Error Reporting" src={cliReporting} />
 
 # How To Upgrade
 
