--- a/docs/changelog/5.3.0.mdx
+++ b/docs/changelog/5.3.0.mdx
@@ -2,7 +2,7 @@
 id: 5.3.0
 title: Webiny 5.3.0
 sidebar_label: "5.3.0"
-keywords: ["webiny", "version", "5.3.0"]
+keywords: ["webiny", "version", "5.3.0", "changelog"]
 description: See what's new in Webiny version 5.3.0.
 ---
 
