fix: change contains to highlights

--- a/docs/changelog/5.3.0.mdx
+++ b/docs/changelog/5.3.0.mdx
@@ -12,7 +12,7 @@ import searchBarCms from "./5.3.0/search-bar-cms.png";
 
 # Changes
 
-This document contains the most important fixes, improvements, and features, that were introduced in Webiny `5.3.0`.
+This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.3.0`.
 
 ## Headless CMS
 
