fix: add `--no-cleanup` flag info

--- a/docs/changelog/5.3.0.mdx
+++ b/docs/changelog/5.3.0.mdx
@@ -39,6 +39,19 @@ So, from now on, whenever there's a chance to provide additional information abo
 
 <CenteredImage alt="Webiny CLI - Improved Error Reporting" src={cliReporting} />
 
+### `create-webiny-project` - Added `--no-cleanup` flag [(#1526)](https://github.com/webiny/webiny-js/pull/1526)
+
+Upon creating a new Webiny project with the `create-webiny-project` tool, sometimes, users experience errors. And when that happens, the tool would, be default, automatically cleanup all of the files that were generated in the process.
+
+With the newly added `--no-cleanup` flag, this can now be prevented, allowing the user to check the contents of generate files, and maybe provide more info while debugging these errors.
+
+You can use the `--no-cleanup` flag like so:
+
+```bash
+npx create-webiny-project my-project-folder --no-cleanup
+```
+
+
 # How To Upgrade
 
 If you are already using Webiny version 5.2.x, there are no special migration steps that need to be taken. So, if you are ready to upgrade, in your terminal of choice, simply run the following commands:
