--- a/docs/key-topics/theme/form-builder/layouts.mdx
+++ b/docs/key-topics/theme/form-builder/layouts.mdx
@@ -24,7 +24,7 @@ Because the form layout is a React component, there are virtually no restriction
 Feel free to organize the code to your liking, import custom CSS, fonts, or even additional custom React components if there's a need for it.
 
 ## Using Layout in Forms
-Be default, every form has a default layout, which can be changed via the form settings. In the form builder, click on the settings icon in the top right corner:
+Be default, every form has a default layout, which can be changed via the form settings. In the Form Builder, click on the settings icon in the top right corner:
 
 <!-- vale off -->
 
@@ -95,7 +95,7 @@ The following table shows a list of all keys and values that the plugin must def
 | :---------- | :---------------- | :----------------------------------------------------------------------------------------------------------- |
 | `name`      | `string`          | Unique plugin name.                                                                                          |
 | `type`      | `string`          | Plugin type, must equal to `form-layout`.                                                                    |
-| `layout`     | `Object`          | Object containing a unique `name` for the theme, a human readable `title` and a reference to the actual React `component` that will be used to render the form. |
+| `layout`     | `Object`          | Object containing a unique `name` for the theme, a human readable `title` and a reference to the actual React `component` that is used to render the form. |
 
 
 ### Form Layout React Component
@@ -112,16 +112,16 @@ If needed, feel free to edit the file to your liking, or just create a copy and,
 | `getFieldById`     | `Function`                                          | Returns a single form field by given ID.                                                                                                                                               |
 | `getFields`        | `Array<Array<FormRenderFieldType>>`                 | Returns a list of all form fields.                                                                                                                                                     |
 | `getDefaultValues` | `Object`                                            | Returns default values for all form fields.                                                                                                                                            |
-| `ReCaptcha`        | `ReCaptchaComponentType`                            | A components that shows Google reCAPTCHA, a simple check that prevents you from spammers and bots (only if enabled via [form settings](/docs/webiny-apps/form-builder/form-settings)). |
-| `TermsOfService`   | `TermsOfServiceComponentType`                       | A component that shows terms of service message (only if enabled via [form settings](/docs/webiny-apps/form-builder/form-settings).                                                    |
+| `ReCaptcha`        | `ReCaptchaComponentType`                            | A components that shows Google reCAPTCHA, a simple check that prevents you from spammers and bots (only if enabled via `form settings`). |
+| `TermsOfService`   | `TermsOfServiceComponentType`                       | A component that shows terms of service message (only if enabled via `form settings`).                                                    |
 | `submit`           | `(data: Object) => Promise<FormSubmitResponseType>` | Call this callback to submit the form.                                                                                                                                                 |
-| `formData`         | `FormDataType`                                      | Contains data about the form, e.g. form name, layout, settings, and so on.                                                                                                             |
+| `formData`         | `FormDataType`                                      | Contains data about the form, for example form name, layout, settings, and so on.                                                                                                             |
 
 ## Add a New Form Layout
 
 You can add a new form layout in the Form Builder app in these two simple steps:
 1. create a React component which contains all the logic related to the layout
-2. then, register it as a [`form-layout`](/docs/references/form-builder/plugins) plugin
+2. then, register it as a [`form-layout`](/docs/references/form-builder/plugins#form-layout) plugin
 
 ### Create Layout Component
 
