--- a/docs/key-topics/theme/page-builder/introduction.mdx
+++ b/docs/key-topics/theme/page-builder/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 id: introduction
-title: Decoding Page Builder Theme
+title: Page Builder Theme
 sidebar_label: Introduction
-keywords: ["Page Builder", "theme", "style", "plugins"]
-description: Decoding Page Builder Theme
+keywords: ["Webiny", "Page Builder", "theme", "style", "plugins"]
+description: In this article, we'll learn about the Form Builder theme
 ---
 
 <!-- Always include this section on top of the page. -->
@@ -79,8 +79,8 @@ In full a `pb-theme` plugin contains the following elements:
 
 Learn more about the specific theme components:
 
-- [colors](/docs/key-topics/theme/decoding-page-builder-theme/colors)
-- [elements](/docs/key-topics/theme/decoding-page-builder-theme/elements)
+- [colors](/docs/key-topics/theme/page-builder/colors)
+- [elements](/docs/key-topics/theme/page-builder/elements)
 
 ### [`pb-page-layout`](/docs/references/page-builder/plugins#pb-page-layout) plugin
 
@@ -141,4 +141,4 @@ After saving the change, your newly registered layout appear in the app as shown
 
 <!-- vale on -->
 
-To learn more about layouts and how to compose one, have a look at the [layouts page](/docs/key-topics/theme/decoding-page-builder-theme/layouts).
+To learn more about layouts and how to compose one, have a look at the [layouts page](/docs/key-topics/theme/page-builder/layouts).
