--- a/docs/changelog/5.3.0.mdx
+++ b/docs/changelog/5.3.0.mdx
@@ -24,7 +24,7 @@ While querying data via the [Headless CMS GraphQL API](/docs/key-topics/webiny-a
 
 A couple of fixes were implemented on the search bar, located in the content entries view:
 
-- while a search term is typed into the search bar's input, switching to a different content entries section via the main menu no longer causes an infinite redirect loop in the browser
+- if a search term was typed into the search bar's input, switching to a different content entries section via the main menu no longer causes an infinite redirect loop in the browser
 - results don't disappear when clearing up the search bar's input
 
 <CenteredImage alt="Headless CMS - Fixed Search Bar" src={searchBarCms} />
