fix(key-topics): react component naming

--- a/docs/key-topics/scaffolds/react-component.mdx
+++ b/docs/key-topics/scaffolds/react-component.mdx
@@ -8,7 +8,7 @@ description: How to Generate a Simple React Component Package
 
 
 :::tip What you'll learn
-- how to generate a react component package
+- how to generate a React component package
 :::
 
 ## Prerequisites
