fix: typo and grammar

--- a/docs/key-topics/theme/form-builder/introduction.mdx
+++ b/docs/key-topics/theme/form-builder/introduction.mdx
@@ -38,11 +38,11 @@ You can also insert the forms created in Form Builder into a page using the Page
 :::
 
 
-Similar to how the layouts for pages work, the form layouts control how that form will be rendered. This includes all elements as inputs, dropdown, submit button and the success message.
+Similar to how the layouts for pages work, the form layouts control how that form renders. This includes all elements as inputs, dropdown, submit button, and the success message.
 
 The default theme includes a single form layout which should fit most use-cases. If you wish to do any visual tweaks, it's best to just modify the stylesheets.
 
-For more advance case you might want to create a custom form layout. The best approach would be to copy the existing one and update the things you need to adapt. There are comments inside the default form layout which will help you find your way around.
+For more advance case you might want to create a custom form layout. The best approach would be to copy the existing one and update the things you need to adapt. There are comments inside the default form layout that helps you find your way around.
 
 ## Registering a Theme
 The default Form Builder theme is located at [`apps/theme/formBuilder/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/theme/formBuilder/index.ts) with the following content:
