--- a/docs/key-topics/theme/form-builder/layouts.mdx
+++ b/docs/key-topics/theme/form-builder/layouts.mdx
@@ -76,7 +76,7 @@ export default [
 ```
 
 :::note
-The plugin is defined once, but must be registered both in your admin and website apps.
+The plugin is defined once but must be registered both in your admin and website apps.
 It enables you to do both:
 - see the form preview in the Form Builder editor
 - and show your form on the actual website
@@ -95,7 +95,7 @@ The following table shows a list of all keys and values that the plugin must def
 | :---------- | :---------------- | :----------------------------------------------------------------------------------------------------------- |
 | `name`      | `string`          | Unique plugin name.                                                                                          |
 | `type`      | `string`          | Plugin type, must equal to `form-layout`.                                                                    |
-| `layout`     | `Object`          | Object containing a unique `name` for the theme, a human readable `title` and a reference to the actual React `component` that is used to render the form. |
+| `layout`     | `Object`          | Object containing a unique `name` for the theme, a human-readable `title`, and a reference to the actual React `component` that is used to render the form. |
 
 
 ### Form Layout React Component
@@ -120,7 +120,7 @@ If needed, feel free to edit the file to your liking, or just create a copy and,
 ## Add a New Form Layout
 
 You can add a new form layout in the Form Builder app in these two simple steps:
-1. create a React component which contains all the logic related to the layout
+1. create a React component that contains all the logic related to the layout
 2. then, register it as a [`form-layout`](/docs/references/form-builder/plugins#form-layout) plugin
 
 ### Create Layout Component
