--- a/docs/key-topics/theme/page-builder/elements.mdx
+++ b/docs/key-topics/theme/page-builder/elements.mdx
@@ -101,7 +101,7 @@ In the case of the `button` element, the `types` attribute contains available bu
 Each type references a specific class name that gets added to the button component when that type is selected.
 
 :::note
-By default Webiny uses [BEM naming](http://getbem.com/introduction/).
+By default, Webiny uses [BEM naming](http://getbem.com/introduction/).
 The default button class is `webiny-pb-element-button`, so when the user selects the `primary` button type,
 it adds a modifier of `primary` to the base class, meaning the resulting class name becomes `webiny-pb-element-button--primary`.
 :::
