--- a/docs/key-topics/theme/page-builder/introduction.mdx
+++ b/docs/key-topics/theme/page-builder/introduction.mdx
@@ -103,9 +103,9 @@ import StaticLayout from "./layouts/Static";
 
 Each layout has the following attributes:
 
-- `name` - internal identifier for that particular layout
+- `name` - an internal identifier for that particular layout
 - `type` - plugin type, must be set to `pb-page-layout`
-- `layout` - an object containing the layout `name`, `title` and a React `component` used to render the layout
+- `layout` - an object containing the layout `name`, `title`, and a React `component` used to render the layout
 
 To introduce multiple layouts all you need to do is register multiple `pb-page-layout` plugins.
 It's also quite easy to register a new layout into the default theme:
