--- a/docs/key-topics/theme/page-builder/layouts.mdx
+++ b/docs/key-topics/theme/page-builder/layouts.mdx
@@ -18,7 +18,7 @@ description: Page Builder Theme - Layouts
 ## Overview
 A layouts define the content hierarchy. It is a pattern that defines a website’s structure. It provides clear paths for navigation within webpages and puts the most important elements of a website front and center.
 
-The most commonly used layout consists of three parts:
+The most used layouts consist of three parts:
 - header at the top containing links that help users to navigate around the website
 - page content in the center
 - footer at the very bottom containing various information about the website
