--- a/docs/key-topics/scaffolds/admin-area-module.mdx
+++ b/docs/key-topics/scaffolds/admin-area-module.mdx
@@ -8,22 +8,23 @@ description: How to Generate a Simple Admin Area Module
 
 
 :::tip What you'll learn
-- how to generate a simple admin area module
+- how to generate a simple Admin Area Module
 :::
-
-## Prerequisites
-Before you start this reading this key topic, make sure that you have Webiny installed and to read our [Webiny CLI](/docs/key-topics/webiny-cli) key topic.
 
 ## Overview
 Webiny CLI Admin Area Module Scaffold is the tool that you'll be using to generate a simple React application for our Admin Area.
 It is meant to work, out of the box, with our scaffolded [GraphQL API](/docs/key-topics/scaffolds/graphql-api) as it contains the UI for all the generated API operations.
 
-Of course, you can modify it to what ever you require.
+Of course, you can modify it to whatever you require.
 
 
 ## Command
 
-To start the scaffolding run the `yarn webiny scaffold` command and then choose the `Admin Area package` option.
+To start the scaffolding, run the command
+```
+yarn webiny scaffold
+```
+And then choose the `Admin Area package` option.
 
 ## Details
 
