--- a/docs/key-topics/scaffolds/graphql-api.mdx
+++ b/docs/key-topics/scaffolds/graphql-api.mdx
@@ -8,15 +8,12 @@ description: How to Generate a Simple GraphQL API
 
 
 :::tip What you'll learn
-- how to generate a simple graphql api
+- how to generate a simple GraphQL API
 :::
-
-## Prerequisites
-Before you start this reading this key topic, make sure that you have Webiny installed and to read our [Webiny CLI](/docs/key-topics/webiny-cli) key topic.
 
 ## Overview
 Webiny CLI GraphQL API Scaffold is the tool that you'll be using to generate a simple GraphQL API which contains basic create, update, delete, read and list operations.
-It also contains Elasticsearch implementation for advanced searching due to DynamoDB search is, almost, non-existent.
+It also contains Elasticsearch implementation for advanced searching due to DynamoDB search is almost non-existent.
 
 You can remove the Elasticsearch code if you do not have a need for it.
 
@@ -24,7 +21,11 @@ Generated code contains tests for the queries and mutations.
 
 ## Command
 
-To start the scaffolding run the `yarn webiny scaffold` command and then choose the `GraphQL API package` option.
+To start the scaffolding, run the command:
+```
+yarn webiny scaffold
+```
+And then choose the `GraphQL API package` option.
 
 ## Details
 
