--- a/docs/key-topics/scaffolds/react-component.mdx
+++ b/docs/key-topics/scaffolds/react-component.mdx
@@ -8,27 +8,28 @@ description: How to Generate a Simple React Component Package
 
 
 :::tip What you'll learn
-- how to generate a React component package
+- how to generate a React Component Package
 :::
 
-## Prerequisites
-Before you start this reading this key topic, make sure that you have Webiny installed and to read our [Webiny CLI](/docs/key-topics/webiny-cli) key topic.
-
 ## Overview
-Webiny CLI Simple React Component Scaffold is the tool that you'll be using to generate a React component package.
+Webiny CLI Simple React Component Package Scaffold is the tool that you'll be using to generate a React component package.
 
 It generates a React component, links it in the `node_modules` and exports it for usage in your applications.
 
-Of course, you can modify it to what ever you require.
+Of course, you can modify it to whatever you require.
 
 
 ## Command
 
-To start the scaffolding run the `yarn webiny scaffold` command and then choose the `Simple React component package` option.
+To start the scaffolding, run the command:
+```
+yarn webiny scaffold
+```
+And then choose the `Simple React component package` option.
 
 ## Details
 
-There are few questions that you will need to go through before actual component is generated. Questions are:
+There are a few questions that you will need to go through before the actual component is generated. Questions are:
 
 #### 1. Enter the name of the component (in pascal-case)
 The name of your component. It is used when importing the component from the package and in some parts of the code.
@@ -39,6 +40,7 @@ The location of your component from the root of the project.
 By the default location is `packages/your-component-name`, where `your-component-name` is kebab-cased name that you have given in the previous answer.
 
 #### 3. Enter the package name
-The full package name of your component. It is used for the import of the component in the package and when publishing to the registry.
+The full package name of your component.
+It is used for the import of the component in the package and when publishing to the registry.
 
 By the default package name is `@custom-components/your-component-name`, where `your-component-name` is kebab-cased name that you have given in the first answer.
