fix(key-topics): grammarly check

--- a/docs/key-topics/scaffolds/admin-area-module.mdx
+++ b/docs/key-topics/scaffolds/admin-area-module.mdx
@@ -8,7 +8,7 @@ description: How to Generate a Simple Admin Area Module
 
 
 :::tip What you'll learn
-- how to generate a simple Admin Area Module
+- how to generate a Admin Area Module
 :::
 
 ## Overview
@@ -16,7 +16,6 @@ Webiny CLI Admin Area Module Scaffold is the tool that you'll be using to genera
 It is meant to work, out of the box, with our scaffolded [GraphQL API](/docs/key-topics/scaffolds/graphql-api) as it contains the UI for all the generated API operations.
 
 Of course, you can modify it to whatever you require.
-
 
 ## Command
 
