--- a/docs/key-topics/scaffolds/graphql-api.mdx
+++ b/docs/key-topics/scaffolds/graphql-api.mdx
@@ -12,10 +12,10 @@ description: How to Generate a Simple GraphQL API
 :::
 
 ## Overview
-Webiny CLI GraphQL API Scaffold is the tool that you'll be using to generate a simple GraphQL API which contains basic create, update, delete, read and list operations.
+Webiny CLI GraphQL API Scaffold is the tool that you'll be using to generate a simple GraphQL API, which contains basic create, update, delete, read, and list operations.
 It also contains Elasticsearch implementation for advanced searching due to DynamoDB search is almost non-existent.
 
-You can remove the Elasticsearch code if you do not have a need for it.
+You can remove the Elasticsearch code if you do not require it.
 
 Generated code contains tests for the queries and mutations.
 
