fix: replace "site" with "website"

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -70,7 +70,7 @@ To deploy a specific project application, located withing your Webiny project, s
 ```
 yarn webiny deploy api --env dev
 yarn webiny deploy apps/admin --env dev
-yarn webiny deploy apps/site --env dev
+yarn webiny deploy apps/website --env dev
 ```
 
 Note that when deploying a specific project application, the environment (`--env`) argument is not optional, it must always be set.
