--- a/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
+++ b/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
@@ -45,7 +45,7 @@ The following destroy commands destroy cloud infrastructure deployed for three p
 ```
 yarn webiny destroy api --env dev
 yarn webiny destroy apps/admin --env dev
-yarn webiny destroy apps/site --env dev
+yarn webiny destroy apps/website --env dev
 ```
 
 ## Troubleshooting
