fix: remove "stack"

--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -84,4 +84,4 @@ Webiny uses Pulumi, a modern infrastructure as code solution. Find out more in t
 
 **Is there a built-in command that destroys the whole project?**
 
-At the moment, there is not. To do that, run separate `webiny stack destroy` commands on each project application. Please visit the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide to learn more.
+At the moment, there is not. To do that, run separate `webiny destroy` commands on each project application. Please visit the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide to learn more.
