wip: create 5.4.0 changelog

--- a/docs/changelog/5.4.0.mdx
+++ b/docs/changelog/5.4.0.mdx
@@ -7,7 +7,8 @@ description: See what's new in Webiny version 5.4.0.
 ---
 
 import CenteredImage from "../mdxComponents/centeredImage";
-import watchCommandGif from "./5.4.0/watch-command-webiny.gif";
+import watchCommand from "./5.4.0/watch-command-webiny.gif";
+import treeCommand from "./5.4.0/tree-command.png";
 
 # Changes
 
@@ -15,7 +16,7 @@ This document highlights the most important fixes, improvements, and features, t
 
 ## Webiny CLI
 
-### The `watch` command [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
+### Introduced New `webiny watch` Command [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
 
 The new `webiny watch` command brings the whole local development experience up a notch.
 
@@ -26,10 +27,13 @@ This is not ideal for a couple of reasons:
 - always builds all of the api packages and attempts to re-deploy all of the cloud infrastructure resources that changed, not just the changed resources you’re working on
 - it requires you to run an additional watch command for all of the packages you’re currently working on, which can confuse the user
 
-
 But no more… Now, you’ll be able to just run the `yarn webiny watch api --env {your-environment}` command and simply start coding! The command will start watching all of the relevant packages (no matter where they’re located in your Webiny project) and also re-deploy only relevant cloud infrastructure resources (e.g. a single Lambda function), as needed.
 
-<CenteredImage alt='Webiny CLI - The New "watch" Command' src={watchCommandGif} />
+<CenteredImage alt='Webiny CLI - The New "watch" Command' src={watchCommand} />
+
+### Introduced New `webiny workspaces tree` Command
+
+<CenteredImage alt='Webiny CLI - The New "webiny workspaces tree" Command' src={treeCommand} />
 
 # How To Upgrade
 
