fix: typo and grammar

--- a/docs/key-topics/theme/introduction.mdx
+++ b/docs/key-topics/theme/introduction.mdx
@@ -10,7 +10,7 @@ description: In this article, we'll learn about the theme
 
 :::tip What You’ll Learn
 - what is a theme
-- how theme is used in Webiny apps
+- how a theme is used in Webiny apps
 - how to register a theme
 :::
 
