--- a/docs/key-topics/theme/page-builder/colors.mdx
+++ b/docs/key-topics/theme/page-builder/colors.mdx
@@ -18,7 +18,7 @@ description: Page Builder Theme - Colors
 
 The colors used throughout the theme and Page Builder pages are extracted as variables and presented as color presets in the page editor.
 
-This ensures a visual consistency between the theme and users creating content.
+This ensures a visual consistency between the theme and user-created content.
 
 ## Color Definition
 
