--- a/docs/key-topics/theme/page-builder/introduction.mdx
+++ b/docs/key-topics/theme/page-builder/introduction.mdx
@@ -16,13 +16,13 @@ description: In this article, we'll learn about the Form Builder theme
 
 ## Overview
 
-This section covers the main configuration file for the Page Builder theme and all the plugins with which it is consists.
-The goal of this article is to help you get familiar with the Page Builder theme, so that, you can customize it as per your need.
+This section covers the main configuration file for the Page Builder theme and all the related plugins.
+The goal of this article is to help you get familiar with the Page Builder theme so that you can customize it as per your need.
 
 ## Configuration File
 
 The main configuration file for the Page Builder theme is located at: [`apps/theme/pageBuilder/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/index.ts).
-This file exports a list of Page Builder theme plugins, and that's what you later import in your `website` app and then register as a plugin.
+This file exports a list of Page Builder theme plugins, and that's what you later import in your [`website`](https://github.com/webiny/webiny-js/blob/next/apps/website/code/src/plugins/index.ts#L6) app and then register as a plugin.
 
 The configuration file is structured in several sections like so:
 
@@ -141,4 +141,10 @@ After saving the change, your newly registered layout appear in the app as shown
 
 <!-- vale on -->
 
-To learn more about layouts and how to compose one, have a look at the [layouts page](/docs/key-topics/theme/page-builder/layouts).
+:::info
+Layouts link to page categories. When you create a page category, say "Blog", you need to select a layout inside which that content display. 
+
+Each page created inside the "Blog" category, by default, use that layout. However, inside the page settings, you can overwrite that on a per-page basis if you need to.
+:::
+
+To learn more about layouts and how to compose one, have a look at the [layouts article](/docs/key-topics/theme/page-builder/layouts).
