--- a/docs/key-topics/theme/page-builder/layouts.mdx
+++ b/docs/key-topics/theme/page-builder/layouts.mdx
@@ -12,11 +12,11 @@ description: Page Builder Theme - Layouts
 
 - what is a layout
 - what are the internals of a layout
-- how to create your custom layout and use it in a page
+- how to create your custom layout and use it on a page
 :::
 
 ## Overview
-A layouts define the content hierarchy. It is a pattern that defines a website’s structure. It provides clear paths for navigation within webpages and puts the most important elements of a website front and center.
+A layout defines the content hierarchy. It is a pattern that defines a website’s structure. It provides clear paths for navigation within webpages and puts the most important elements of a website front and center.
 
 The most used layouts consist of three parts:
 - header at the top containing links that help users to navigate around the website
@@ -27,7 +27,7 @@ The most used layouts consist of three parts:
 `layouts` are linked to page categories. When you create a page category, say "Blog", you need to select a layout inside which that content will be displayed.
 The options available inside the layout dropdown are registered by the [`pb-page-layout`](/docs/references/page-builder/plugins#pb-page-layout) plugin.
 
-Each page created inside the "Blog" category, by default, will use that layout.
+Each page created inside the "Blog" category, by default, use that layout.
 However, inside the page settings, you can overwrite that on a per-page basis if you need to.
 
 <!-- vale off -->
