fix: update as per feedback

--- a/docs/key-topics/theme/form-builder/introduction.mdx
+++ b/docs/key-topics/theme/form-builder/introduction.mdx
@@ -9,8 +9,8 @@ description: In this article, we'll learn about the Form Builder theme
 <!-- Always include this section on top of the page. -->
 
 :::tip What You’ll Learn
-- what is Form Builder theme
-- how theme is used in Form Builder
+- what is a Form Builder theme
+- how a theme is used in Form Builder
 - how to register a Form Builder theme
 :::
 
@@ -31,12 +31,6 @@ How the form looks visually is controlled via the form layout that is selected f
 />
 
 <!-- vale on -->
-
-
-:::info
-You can also insert the forms created in Form Builder into a page using the Page Builder app.
-:::
-
 
 Similar to how the layouts for pages work, the form layouts control how that form renders. This includes all elements as inputs, dropdown, submit button, and the success message.
 
