fix: more updates

--- a/docs/key-topics/theme/form-builder/layouts.mdx
+++ b/docs/key-topics/theme/form-builder/layouts.mdx
@@ -84,7 +84,7 @@ It enables you to do both:
 
 
 :::info
-The Form Builder theme is located in [`apps/theme`](https://github.com/webiny/webiny-js/blob/next/apps/theme/formBuilder/index.ts) package
+The Form Builder theme is located in the [`apps/theme`](https://github.com/webiny/webiny-js/blob/next/apps/theme/formBuilder/index.ts) package
 and is registered in both [`apps/admin`](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/src/plugins/index.ts#L59)
 and [`apps/admin`](https://github.com/webiny/webiny-js/blob/next/apps/website/code/src/plugins/index.ts#L6)
 :::
@@ -94,7 +94,7 @@ The following table shows a list of all keys and values that the plugin must def
 | Key         | Value Type        | Description                                                                                                  |
 | :---------- | :---------------- | :----------------------------------------------------------------------------------------------------------- |
 | `name`      | `string`          | Unique plugin name.                                                                                          |
-| `type`      | `string`          | Plugin type, must equal to `form-layout`.                                                                    |
+| `type`      | `string`          | Plugin type must equal to `form-layout`.                                                                    |
 | `layout`     | `Object`          | Object containing a unique `name` for the theme, a human-readable `title`, and a reference to the actual React `component` that is used to render the form. |
 
 
@@ -115,7 +115,7 @@ If needed, feel free to edit the file to your liking, or just create a copy and,
 | `ReCaptcha`        | `ReCaptchaComponentType`                            | A components that shows Google reCAPTCHA, a simple check that prevents you from spammers and bots (only if enabled via `form settings`). |
 | `TermsOfService`   | `TermsOfServiceComponentType`                       | A component that shows terms of service message (only if enabled via `form settings`).                                                    |
 | `submit`           | `(data: Object) => Promise<FormSubmitResponseType>` | Call this callback to submit the form.                                                                                                                                                 |
-| `formData`         | `FormDataType`                                      | Contains data about the form, for example form name, layout, settings, and so on.                                                                                                             |
+| `formData`         | `FormDataType`                                      | Contains data about the form, for example, form name, layout, settings, and so on.                                                                                                             |
 
 ## Add a New Form Layout
 
@@ -167,7 +167,7 @@ const SimpleFormLayout: FormLayoutComponent = ({
 
 export default SimpleFormLayout;
 ```
-Also make the following style changes to make our layout stand apart:
+Also, make the following style changes to make our layout stand apart:
 
 ```scss title="apps/theme/formBuilder/styles/theme.scss"
 //..
