--- a/docs/changelog/5.4.0.mdx
+++ b/docs/changelog/5.4.0.mdx
@@ -6,40 +6,27 @@ keywords: ["webiny", "version", "5.4.0", "changelog"]
 description: See what's new in Webiny version 5.4.0.
 ---
 
-import CenteredImage from "../mdxComponents/centeredImage";
-import watchCommand from "./5.4.0/watch-command-webiny.gif";
-import treeCommand from "./5.4.0/tree-command.png";
-
 # Changes
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.4.0`.
 
+## Headless CMS
+
+### Introduced Something
+
+Description here.
+
 ## Webiny CLI
 
-### Introduced New `webiny watch` Command [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
+### Introduced New `xyz` Command
 
-The new `webiny watch` command brings the whole local development experience up a notch.
-
-Let’s say you wanted to expand the default GraphQL API, that’s deployed as part of the **API** project application. At the moment, in order to do that, you’d have to make your code changes first, and then deploy them using the [`yarn webiny deploy api --env {your-environment}`](#) command.
-
-This is not ideal for a couple of reasons:
-- it requires you to manually execute the command all the time
-- always builds all of the api packages and attempts to re-deploy all of the cloud infrastructure resources that changed, not just the changed resources you’re working on
-- it requires you to run an additional watch command for all of the packages you’re currently working on, which can confuse the user
-
-But no more… Now, you’ll be able to just run the `yarn webiny watch api --env {your-environment}` command and simply start coding! The command will start watching all of the relevant packages (no matter where they’re located in your Webiny project) and also re-deploy only relevant cloud infrastructure resources (e.g. a single Lambda function), as needed.
-
-<CenteredImage alt='Webiny CLI - The New "watch" Command' src={watchCommand} />
-
-### Introduced New `webiny workspaces tree` Command
-
-<CenteredImage alt='Webiny CLI - The New "webiny workspaces tree" Command' src={treeCommand} />
+Description here.
 
 # How To Upgrade
 
-If you are already using Webiny version 5.2.x, there are no special migration steps that need to be taken. So, if you are ready to upgrade, in your terminal of choice, simply run the following commands:
+If you are already using Webiny version 5.3.x, then there are no special migration steps that need to be taken. So, when ready to upgrade, in your terminal of choice, simply run the following commands:
 
 - `yarn up "@webiny/*@5.4.0"`
 - `yarn webiny deploy`
 
-On the other hand, if you’re coming with an older version of Webiny, before upgrading, make sure to check our [How To Upgrade](/docs/how-to-guides/upgrade-webiny/overview) guide.
+On the other hand, if you’re coming from an older version of Webiny, before upgrading, make sure to check our [How To Upgrade](/docs/how-to-guides/upgrade-webiny/overview) guide.
