--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -15,6 +15,10 @@ import treeCommand from "./5.5.0/tree-command.png";
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.5.0`.
 
+:::info How To Upgrade?
+Please check the [Webiny 5.5.0 migration guide](#) for the upgrade steps.
+:::
+
 ## Webiny CLI
 
 ### Brand New `webiny watch` Command [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
@@ -66,21 +70,87 @@ For additional information and usage examples, simply type the following command
 yarn webiny ws tree --help
 ```
 
-# Project Organization
+## Other
 
-### Added `webiny.application.js` File [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
+### Project Organization Changes [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
 
-Description.
+This release introduces a couple of changes on a project level. Most of these are required by the newly introduced `watch` command.
 
-### Locally Stored State Files Moved To Project Root [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
+:::info
+All the changes can be automatically applied in your existing Webiny project via the new `webiny upgrade` command. Please take a look at the [upgrade guide](/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0) for more information.
+:::
 
-Description.
+#### 1. `.pulumi` Folders Moved To Project Root
 
-# How To Upgrade
+By default, the Pulumi cloud infrastructure [state files](/docs/key-topics/deployment/iac-with-pulumi#state-files) are stored locally - in `.pulumi` folders located in your project applications folders:
 
-On the other hand, if you’re coming with an older version of Webiny, before upgrading, make sure to check our [How To Upgrade](/docs/how-to-guides/upgrade-webiny/overview) guide.
+```bash
+api/.pulumi
+apps/admin/.pulumi
+apps/website/.pulumi
+```
 
-Once you go through these, all it remains is running the following commands, as usual:
+Because of the fact that these files change on every deploy and that interferes with the new `webiny watch` command, we've been forced to move these folders outside of project application folders. So, all of your locally stored cloud infrastructure state files are now located in your project root, inside of the new `.pulumi` folder:
 
-- `yarn up "@webiny/*@5.5.0"`
-- `yarn webiny deploy`
+```bash
+.pulumi/api/.pulumi
+.pulumi/apps/admin/.pulumi
+.pulumi/apps/website/.pulumi
+```
+
+:::danger CI/CD workflows
+We've seen some users storing the `.pulumi` folders in an internal Amazon S3 bucket in their CI/CD workflows. So, if you're using this approach, make sure to take the new location of the `.pulumi` folders into consideration and adjust your CI/CD logic accordingly.
+:::
+
+:::caution
+As noted in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#-precaution-measures) section, please test your changes in pre-production environments first.
+:::
+
+:::info
+If you need additional help or information about this, feel free to contact us over [Slack](https://www.webiny.com/slack).
+:::
+
+#### 2. `webiny.root.js` Renamed To `webiny.project.js`
+
+The `webiny.root.js` file, located in your project root, has been renamed to `webiny.project.js`.
+
+#### 3. `webiny.application.js` Files
+
+Every project application now has its own `webiny.application.js` file. Think of it as a simple manifest file, which contains project application's ID, name, and description. Optionally, it can also include additional arbitrary properties, if need be.
+
+:::info
+Learn more about project applications in the [Project Applications](/docs/key-topics/project-organization/project-applications) guide.
+:::
+
+#### 4. API packages - Added `watch` Scripts and Commands
+
+Every package located within the `api` project application folder received a `watch` script in its `package.json` file and a `watch` command in its `webiny.config.js` file.
+
+#### 5. Admin Area / Website - Added `watch` Scripts
+
+The **Admin Area** and **Website** React applications also received a `watch` script in their respective `package.json` files. It is a copy of the existing `start` script.
+
+#### 6. Custom Packages - New `build` and `watch` Scripts
+
+Every custom-made package in your project now uses new `build` and `watch` scripts, located in its `package.json` file.
+
+:::info
+Custom-made packages are, for example, packages created with the `webiny scaffold` command.
+:::
+
+The new `scripts` section should look like the following:
+
+```json title="package.json" {3,4}
+(...)
+  "scripts": {
+    "build": "yarn webiny run build",
+    "watch": "yarn webiny run watch"
+  }
+(...)
+```
+
+In order for these to work, the `@webiny/cli` and `@webiny/project-utils` were added as development dependencies within the `devDependencies` property. And finally, the `webiny.config.js` file was created, which defines the actual `build` and `watch` commands.
+
+:::info
+Check this [example package](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template) to see updated [`package.json`](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template/package.json) and [`webiny.config.js`](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template/webiny.config.js) files.
+:::
