--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -16,7 +16,7 @@ import treeCommand from "./5.5.0/tree-command.png";
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.5.0`.
 
 :::info How To Upgrade?
-Please check the [Webiny 5.5.0 migration guide](#) for the upgrade steps.
+Please check the [Webiny 5.5.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0) for the upgrade steps.
 :::
 
 ## Webiny CLI
