wip: create 5.5.5 upgrade guide

--- a/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
@@ -7,13 +7,15 @@ description: Learn how to upgrade Webiny from 5.4.0 to 5.5.0.
 ---
 
 :::tip What you’ll learn
-
 - how to upgrade Webiny from 5.4.0 to 5.5.0
-  :::
+:::
 
 :::danger
-
 Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#-precaution-measures) section.
+:::
+
+:::info
+Make sure to check out the [5.5.0 changelog](/docs/changelog/5.5.0) to get familiar with all of the changes that this release brought.
 :::
 
 ## Upgrade Webiny Packages
@@ -21,6 +23,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 The first step is to upgrade all `@webiny/*` packages, which can be done by running the following command in the root of your project:
 
 ```bash
+# Execute in your project root.
 yarn up "@webiny/*@5.5.0"
 ```
 
@@ -31,6 +34,7 @@ This release includes a couple of smaller changes on the project organization le
 Once you've run the above upgrade command, run the following:
 
 ```bash
+# Execute in your project root.
 yarn webiny upgrade 5.5.0
 ```
 
@@ -38,55 +42,4 @@ yarn webiny upgrade 5.5.0
 Before running the `webiny upgrade` command, we recommend that you commit any active code changes you might have in your working branch.
 :::
 
-Once the command has finished, your project should be completely updated and you can proceed by committing the changes to your working branch.
-
-### What Changed?
-
-:::info
-While it's running, the `webiny upgrade` command will display all of the changes it is performing. Furthermore, once the command has finished, you can also run the `git status` command to retrieve a list of files that were modified in the process.
-:::
-
-The following is a list of all changes that the `webiny upgrade` command will perform.
-
-#### 1. Moved `.pulumi` Folders To Project Root
-
-By default, the Pulumi cloud infrastructure [state files](/docs/key-topics/deployment/iac-with-pulumi#state-files) are stored locally - in `.pulumi` folders located in your project applications folders:
-
-```bash
-api/.pulumi
-apps/admin/.pulumi
-apps/website/.pulumi
-```
-
-Because of the fact that these files change on every deploy and that interferes with the new `webiny watch` command, we've been forced to move these folders outside of project application folders. So, all of your locally stored cloud infrastructure state files are now located in your project root, inside of the new `.pulumi` folder:
-
-```bash
-.pulumi/api/.pulumi
-.pulumi/apps/admin/.pulumi
-.pulumi/apps/website/.pulumi
-```
-
-##### Note about CI/CD workflows
-
-We've seen some users storing the `.pulumi` folders in an internal Amazon S3 bucket in their CI/CD workflows. So, if you're using this approach, make sure to take the new location of the `.pulumi` folders into consideration and adjust your CI/CD logic accordingly.
-
-:::caution
-As noted in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#-precaution-measures) section, please test your changes in pre-production environments first.
-:::
-
-:::info
-If you need additional help or information about this, feel free to contact us over [Slack](https://www.webiny.com/slack).
-:::
-
-#### 2. Renamed `webiny.root.js` to `webiny.project.root`
-
-#### 3. Created `webiny.application.js` files
-
-#### 4. API - added `watch` command
-
-#### 5. Admin Area / Website - added `watch` command
-
-#### 6. Added new commands for custom packages
-
-
-Add `"watch": "yarn webiny run watch"` entry to the `scripts` section in every `package.json` file located withing the API project application:
+Once the command has finished, your project should be completely updated. You can proceed by committing the changes to your working branch and trying to [deploy](/docs/how-to-guides/deployment/deploy-your-project) the project to one of the development or pre-production environment.
